// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicWrapper renders actual value 1`] = `
<span>
  Dynamic Content
</span>
`;

exports[`DynamicWrapper renders fixed content when \`process.env.IS_PERCY\` is true 1`] = `
<span>
  Test
</span>
`;
